--- a/source/package.json
+++ b/source/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.119",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "lodash": "^4.17.11",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
