--- a/source/package.json
+++ b/source/package.json
@@ -10,6 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.4",
     "@types/lodash": "^4.14.119",
     "bootstrap-vue": "^2.0.0-rc.11",
     "lodash": "^4.17.11",
