--- a/source/package.json
+++ b/source/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.4",
     "@types/lodash": "^4.14.119",
+    "@types/vuelidate": "^0.7.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "lodash": "^4.17.11",
     "vue": "^2.5.17",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
-    "vue-quill-editor": "^3.0.6"
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
