--- a/source/package.json
+++ b/source/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "lodash": "^4.17.11",
     "vue": "^2.5.17",
+    "vue-highlightjs": "^1.3.3",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4"
