--- a/source/package.json
+++ b/source/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nm-component-library",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "main": "dist/lib/nmlib.common.js",
   "scripts": {
@@ -13,10 +13,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.4",
+    "@types/auth0-js": "^8.11.10",
     "@types/lodash": "^4.14.119",
     "@types/vuelidate": "^0.7.3",
+    "auth0-js": "^9.10.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "vue": "^2.5.17",
     "vue-highlightjs": "^1.3.3",
     "vue-quill-editor": "^3.0.6",
