--- a/source/package.json
+++ b/source/package.json
@@ -20,6 +20,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "terser": "3.14",
     "vue": "^2.5.17",
     "vue-highlightjs": "^1.3.3",
     "vue-quill-editor": "^3.0.6",
@@ -39,6 +40,9 @@
     "plugins": {
       "autoprefixer": {}
     }
+  },
+  "resolutions": {
+    "terser": "3.14.0"
   },
   "browserslist": [
     "> 1%",
