--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "vue-highlightjs": "^1.3.3",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
-    "vuelidate": "^0.7.4",
+    "vuelidate": "^0.7.4"
+  },
+  "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-typescript": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
@@ -34,8 +36,6 @@
     "sass-loader": "^7.0.1",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
-  },
-  "devDependencies": {
   },
   "postcss": {
     "plugins": {
