--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "serve": "vue-cli-service serve",
     "build:demo": "vue-cli-service build --dest dist/demo src/main.ts",
     "build:lib": "vue-cli-service build --target lib --name nmlib --dest dist/lib src/module.ts",
-    "lint": "vue-cli-service lint",
-    "postinstall": "vue-cli-service build --target lib --name nmlib --dest dist/lib src/module.ts"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
@@ -25,10 +24,10 @@
     "vue": "^2.5.17",
     "vue-highlightjs": "^1.3.3",
     "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
+    "vue-router": "^3.0.1",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-typescript": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
