--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/lib/nmlib.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
+    "build:full": "npm run build:demo && npm run build:lib",
     "build:demo": "vue-cli-service build --dest dist/demo src/main.ts",
     "build:lib": "vue-cli-service build --target lib --name nmlib --dest dist/lib src/module.ts",
     "lint": "vue-cli-service lint"
